Logs : - Fixes some edges cases with quotes wrongly handled - Adds 'group_concat' and 'separator' as function keywords - Adds a new color for function keywords - Fixes a missing space before 'OFFSET' keyword

--- a/src/resources/scss/pages/sql/sql.scss
+++ b/src/resources/scss/pages/sql/sql.scss
@@ -144,6 +144,24 @@
       &--clause {
         @include mixins.glowingRed();
       }
+
+      &--function {
+        @include theming.to-theme(
+          (
+            #{&} : (
+              ('background-image', 'profiler--sql-function--background-image'),
+              ('color', 'profiler--sql-function--color'),
+              ('text-shadow', 'profiler--sql-function--text-shadow')
+            )
+          )
+        );
+
+        // For IE (needed by WebHint)
+        @supports (-webkit-background-clip : text) {
+          -webkit-background-clip : text;
+          -webkit-text-fill-color : transparent;
+        }
+      }
     }
   }
 
